--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -335,34 +335,12 @@ benötigt werden.
 \subsection{Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
 \label{sub:diffie_hellman_key_exchange}
 
-Der auf der Schwierigkeit des Diskreten-Logarithmus-Problems beruhende
-Dif"-fie-Hell"-man-Merk"-le-Schlüs"-sel"-aus"-tausch, englisch:
-\textbf{D}iffie-\textbf{H}ellman-\textbf{K}ey-\textbf{E}xchange (\textbf{DHKE}),
-hat den folgenden Ablauf:
-Zwei Kommunikationspartner, hier Alice und Bob, kommunizieren über einen
-unsicheren Kanal und wollen einen Schlüssel für eine sichere Kommunikation,
-z.\,B. durch eine symmetrische Verschlüsselung, austauschen.
+Der auf der Schwierigkeit des Diskreten-Logarithmus-Problems beruhende Diffie-Hellman-Merkle Schlüsselaustausch, englisch: \textbf{D}iffie-\textbf{H}ellman-\textbf{K}ey-\textbf{E}xchange (\textbf{DHKE}), hat den folgenden Ablauf:
+Zwei Kommunikationspartner, hier Alice und Bob, kommunizieren über einen unsicheren Kanal und wollen einen Schlüssel für eine sichere Kommunikation, z.B. durch eine symmetrische Verschlüsselung, austauschen.
 
-Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den
-bekannten Fallstricken des Verfahrens ausweicht, z.\,B. mit $p = c \cdot q+1$,
-$c \in \N \setminus \{ 0 \}$, $q$ prim, $q$ möglichst groß (etwa
-$p = 2 \cdot q + 1$).
-Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$
-so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$
-mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht
-möglich sein wird (siehe Abschnitt~\ref{ssub:komplexitaet_naiver_algorithmus}).
-Zur Zeit kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge
-von $n_q = 256$ als sicher angenommen werden.
-Weiterhin bestimmt Alice eine Primitivwurzel $g \in \Z_p^*$ (siehe
-Abschnitt~\ref{def:erzeuger}).
-Dann wählt Alice ihren geheimen privaten Schlüssel
-$a \in \Z_p^*$, $(1 \leq a \leq p-2)$, berechnet ihren öffentlichen Schlüssel
-$A$ mit $A \equiv g^a \mod p$ und sendet $(g, p, A)$ über den unsicheren Kanal
-an Bob.
+Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den \todo{bekannte Schwachstellen rausnehmen?}bekannten Fallstricken des Verfahrens ausweicht, z.B. mit $p = c \cdot q+1$, $c \in \N\backslash\{0\}$, $q$ prim, $q$ möglichst groß (etwa $p = 2 \cdot q + 1$). Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$ so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$ mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht möglich sein wird (siehe Abschnitt \ref{sub:komplexitaet_naiver_algorithmus}). Zur Zeit (Jahr 2017) kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge von $n_q = 256$ als sicher \todo{source: https://security.stackexchange.com/questions/112313/what-is-the-current-security-status-of-diffie-hellman-key-exchange}angenommen werden. Weiterhin sucht Alice einen \todo{ist die Formulierung bei Erzeuger korrekt?}Erzeuger $g \in \Z_p^*$, $(2 \leq g \leq p-2)$, welcher $g^k \mod p$, $k \in \N \backslash \{0\}$, zyklisch ohne Untergruppen auf $\Z_p^*$ abbildet (siehe Abschnitt \ref{def:erzeuger}). Dann wählt Alice ihren geheimen privaten Schlüssel $a \in \Z_p^*$, $(1 \leq a \leq p-2)$,  berechnet ihren öffentlichen Schlüssel $A$ mit $A \equiv g^a \mod p$ und sendet ($g$, $p$, $A$) über den unsicheren Kanal an Bob.
 
-Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$,
-$(1 \leq b \leq p-2)$, berechnet seinen öffentlichen Schlüssel $B$ mit
-$B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
+Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$, $(1 \leq b \leq p-2)$, berechnet seinen öffentlichen Schlüssel $B$ mit $B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
 Der gemeinsame geheime Schlüssel $K$ ergibt sich nun auf der Seite von Alice mit
 \begin{align*}
 	K \equiv B^a \mod p
@@ -372,10 +350,11 @@ und auf der Seite von Bob mit
 	K \equiv A^b \mod p \text{.}
 \end{align*}
 
-\begin{figure}[H]\label{fig:dhke}
+\begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{Diffie-Hellman-Schluesselaustausch2.png}
   \caption{Diffie-Hellman-Merkle-Schlüsselaustausch}
+  \label{fig:dhke}
 \end{figure}
 
 \subsubsection{Korrektheit: Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
@@ -383,8 +362,7 @@ und auf der Seite von Bob mit
 Zur Korrektheit des Diffie-Hellman-Merkle Schlüsselaustausches: Beide
 Kommunikationspartner haben den gleichen Schlüssel $K = K_1 = K_2$:
 
-Mit der Kongruenz aus Satz~\ref{satz:potenzen_bei_kongruenzen} lässt sich nun
-einfach zeigen, dass die Schlüssel $K_1$ von Alice und $K_2$ von Bob kongruent
+Mit der Kongruenz aus Satz~\ref{satz:potenzen_bei_kongruenzen} lässt sich zeigen, dass die Schlüssel $K_1$ von Alice und $K_2$ von Bob kongruent
 sind:
 \begin{align*}
   K_1 & \equiv B^a \mod p\\
@@ -443,7 +421,7 @@ sind:
   den diskreten Logarithmus $\text{DL}(A,g,p) = a$ als Lösung der Gleichung
   $A \equiv g^a \mod p$ bzw. $\text{DL}(B,g,p) = b$ als Lösung der Gleichung
   $B \equiv g^b \mod p$ berechnen muss, um $K_1 \equiv B^a \mod p$ oder
-  $K_2 \equiv A^b \mod p$, $K = K_1 = K_2$, ermitteln zu können.
+  $K_2 \equiv A^b \mod p$ ermitteln zu können.
 \end{beispiel}
 
 \subsection{Verschlüsselung mittels Diffie-Hellman-Merkle-Schlüsselaustausch}
@@ -455,15 +433,7 @@ Verschlüsselung mittels
 Bevor, möglicherweise lange bevor, Bob eine Nachricht an Alice schicken möchte,
 muss diese Ihren öffentlichen Schlüssel in geeigneter Weise auf einem
 Schlüsselserver veröffentlichen, wie z.\,B. \url{https://sks-keyservers.net}.
-Des weiteren gleichen sich die Verfahren des DHKE und die Verschlüsselung
-mittels DHKE, wobei Bob den öffentlichen Schlüssel von Alice beim
-Schlüsselserver erfragt und an der Stelle der Erzeugung des geheimen Schlüssels
-$K$ bei DHKE wird stattdessen die Nachricht $m$ zum Ciphertext $c$
-verschlüsselt, mit $(c \equiv A^b \cdot m \Mod{p})$, und zusammen mit dem
-öffentlichen Schlüssel $B$ von Bob an ein Postfach von Alice gesendet.
-Alice entschlüsselt die Nachricht dann mit $m = B^{-a}\cdot c \Mod{p}$, was nach
-dem kleinen Satz von Fermat (siehe Abschnitt~\ref{def:erzeuger}) kongruent ist
-zu $m = B^{(p-1)-a} \cdot c \Mod{p}$.
+Des Weiteren gleichen sich die Verfahren des DHKE und die Verschlüsselung mittels DHKE, wobei Bob den öffentlichen Schlüssel von Alice beim Schlüsselserver erfragt. An der Stelle der Erzeugung des geheimen Schlüssels $K$ bei DHKE verschlüsselt Bob dann stattdessen die Nachricht $m$ zum Ciphertext $c$, mit $c \equiv A^b \cdot m \mod p$, und sendet $c$ zusammen mit seinem öffentlichen Schlüssel $B$ an ein Postfach von Alice. Alice entschlüsselt die Nachricht dann mit $m \equiv  B^{-a}\cdot c  \mod p$, was nach dem kleinen Satz von Fermat (siehe Abschnitt \ref{def:erzeuger}) kongruent ist zu $m \equiv B^{(p-1)-a}\cdot c \mod p$.
 
 \begin{figure}[H]\label{fig:enc_with_dhke}
   \centering
@@ -488,7 +458,7 @@ Wir suchen den Exponenten $x \in \Z_p^*$ für den gilt:
 Da $\Z_p^*$ nur endlich viele Element enthält, können wir für jedes $x$
 überprüfen, ob es die Kongruenz erfüllt.
 
-\begin{algorithm}\label{alg:dlog_naive}
+\begin{algorithm}[H]\label{alg:dlog_naive}
   \caption{naiver Berechnungsalgorithmus}
   \begin{algorithmic}
     \REQUIRE{$p \in \P, \left\langle g \right\rangle \in \Z_p^*, y \in \Z_p^*$}
@@ -501,16 +471,6 @@ Da $\Z_p^*$ nur endlich viele Element enthält, können wir für jedes $x$
     \ENDFOR{}
   \end{algorithmic}
 \end{algorithm}
-
-%\begin{listing}[H]
-%  \caption{Implementation des naiven Berechnungsalgorithmus’}
-%  \begin{minted}{python}
-%    def dlog_naive(root, modulus, value):
-%        for x in range(1, modulus):
-%            if pow(root, x, modulus) == value:
-%                return x
-%  \end{minted}
-%\end{listing}
 
 \subsubsection{Komplexität des naiven Algorithmus’}
 \label{ssub:komplexitaet_naiver_algorithmus}
