Fügt Martins benutzte Bücher hinzu.

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -751,4 +751,21 @@ Restsatz um $x$ zu bestimmen.
   als Lösung. Die Probe $13^{1768} \equiv 111 \mod 1801$ bestätigt dies.
 \end{beispiel}
 
+\begin{thebibliography}{9}
+  \bibitem{koblitz94}
+    Neal Koblitz,
+    \textit{A course in number theory and cryptography},
+    Springer,
+    2. Auflage,
+    1994.
+
+  \bibitem{forster2015}
+    Otto Forster,
+    \textit{Algorithmische Zahlentheorie},
+    Springer Spektrum,
+    2. Auflage,
+    2015
+
+\end{thebibliography}
+
 \end{document}
