--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -4,7 +4,7 @@
 ]{scrartcl}
 
 \usepackage[utf8]{inputenc}
-\usepackage[
+\usepackage[\textbf{•}
   %cm,
   headings
 ]{fullpage}
@@ -442,7 +442,7 @@ sind:
   den diskreten Logarithmus $\text{DL}(A,g,p) = a$ als Lösung der Gleichung
   $A \equiv g^a \Mod{p}$ bzw. $\text{DL}(B,g,p) = b$ als Lösung der Gleichung
   $B \equiv g^b \Mod{p}$ berechnen muss, um $K_1 \equiv B^a \Mod{p}$ oder
-  $K_2 \equiv A^b \Mod{p}$ ermitteln zu können.
+  $K_2 \equiv A^b \Mod{p}$ ermitteln zu können (siehe Abschnitt \ref{ssub:komplexitaet_naiver_algorithmus}).
 \end{beispiel}
 
 \subsection{Verschlüsselung mittels Diffie-Hellman-Merkle-Schlüsselaustausch}
@@ -701,5 +701,22 @@ Restsatz um $x$ zu bestimmen.
   \end{align*}
   als Lösung. Die Probe $13^{1768} \equiv 111 \mod 1801$ bestätigt dies.
 \end{beispiel}
+
+\begin{thebibliography}{9} 
+  \bibitem{koblitz94} 
+    Neal Koblitz, 
+    \textit{A course in number theory and cryptography}, 
+    Springer, 
+    2. Auflage, 
+    1994. 
+ 
+  \bibitem{forster2015} 
+    Otto Forster, 
+    \textit{Algorithmische Zahlentheorie}, 
+    Springer Spektrum, 
+    2. Auflage, 
+    2015 
+ 
+\end{thebibliography}
 
 \end{document}
