bib hannes, list of figures, table of contens

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -80,6 +80,12 @@
   Berechnungsmethoden ein.
 \end{abstract}
 
+\pagebreak
+
+\tableofcontents
+
+\pagebreak
+
 \section{Mathematische Grundlagen}
 \label{sec:mathematische_grundlagen}
   Wir setzen voraus, dass die Leser mit den wichtigsten Begriffen und Sätzen der
@@ -456,7 +462,7 @@ Ein Kommunikationspartner (Bob) schickt eine geheime Nachricht $m$ an einen ande
   \label{fig:enc_with_dhke}
 \end{figure}
 
-\subsubsection{Korrektheit: Verschlüsselung mittels Diffie-Hellman-Merkle Schlüsselaustausch}
+\subsubsection{Korrektheit: Verschlüsselung mittels DHKE}
 \label{sub:enc_with_dhke_proof}
 Beide Kommunikationspartner haben die gleiche Nachricht: $m = m_{\text{Bob}} = m_{\text{Alice}}$
 \begin{proof}
@@ -703,6 +709,12 @@ Vorgehensweise in Pseudocode.
   als Lösung. Die Probe $13^{1768} \equiv 111 \mod 1801$ bestätigt dies.
 \end{beispiel}
 
+\pagebreak
+
+\listoffigures
+
+\pagebreak
+
 \begin{thebibliography}{9} 
   \bibitem{koblitz94} 
     Neal Koblitz, 
@@ -716,7 +728,16 @@ Vorgehensweise in Pseudocode.
     \textit{Algorithmische Zahlentheorie}, 
     Springer Spektrum, 
     2. Auflage, 
-    2015 
+    2015
+    
+  \bibitem{HAC97} 
+    Menezes, Alfred,
+    Oorschot, Paul C.,
+    Vanstone, Scott A., 
+    \textit{Handbook of applied cryptography}, 
+    CRC Press, 
+    1 edition, 
+    1996 
  
 \end{thebibliography}
 
